# arkworks-wasmtime-benchmarks

benchmarks/arkworks/: Dockerfile  benchmark.wasm
benchmarks/arkworks/rust-benchmark/: Cargo.toml
benchmarks/arkworks/rust-benchmark/src/: bls12_377.rs  bls12_381.rs  bw6_761.rs  ed_on_bls12_377.rs  ed_on_bls12_381.rs  groth16.rs  main.rs
benchmarks/bls12-381/: Dockerfile  benchmark.wasm
benchmarks/bls12-381/rust-benchmark/: Cargo.toml
benchmarks/bls12-381/rust-benchmark/src/: main.rs
